# Graduation-Project

./: README.md
Graduation Project/SkillBit/: pyproject.toml
Graduation Project/SkillBit/src/: .env  main.py  requirements.txt
Graduation Project/SkillBit/src/controllers/: BaseController.py  EvaluationController.py  QuizController.py  __init__.py
Graduation Project/SkillBit/src/models/: QuizModels.py
Graduation Project/SkillBit/src/routes/: __init__.py  base.py  quiz.py
Graduation Project/SkillBit/src/stores/llm/: LLMEnums.py  LLMInterface.py  LLMProviderFactory.py
Graduation Project/SkillBit/src/stores/llm/providers/: GeminiProvider.py  OpenAIProvider.py  __init__.py
Graduation Project/SkillBit/src/utils/: WebSearchTool.py  config.py
